deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: firefly-iii-ns
  labels:
    app: firefly-iii
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: firefly-iii
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      containers:
        - name: firefly-iii
          image: firefly-iii/core:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /var/www/html/storage/upload
              name: firefly-iii-data
      volumes:
        - name: firefly-iii-data
          persistentVolumeClaim:
            claimName: firefly-iii-data
