deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: firefly-iii-ns
  labels:
    app: firefly-iii
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: firefly-iii
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      containers:
        - name: firefly-iii
          image: fireflyiii/core:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: firefly-iii-data
              mountPath: /var/www/html/storage/upload
            - name: firefly-iii-env
              mountPath: /var/www/html/.env
              subPath: .env
      volumes:
        - name: firefly-iii-data
          persistentVolumeClaim:
            claimName: firefly-iii-data
        - name: firefly-iii-env
          secret:
            secretName: firefly-iii-env
          
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: importer
  namespace: firefly-iii-ns
spec:
  selector:
    matchLabels:
      app: firefly-iii
  replicas: 1
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      containers:
        - name: importer
          image: fireflyiii/data-importer:latest
          ports:
            - containerPort: 8080
