service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: fireflyiii
spec:
  selector:
    app: firefly-iii
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
