ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fireflyiii-ingress
  namespace: firefly-iii-ns
  labels:
    app: firefly-iii
spec:
  tls:
  - hosts:
    - fireflyiii.310networks.com
  rules:
    - host: fireflyiii.310networks.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: firefly-iii
                port:
                  name: http
